--- a/.env
+++ b/.env
@@ -20,10 +20,10 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-#DB_HOST=mysql
-#DB_PORT=3306
-DB_HOST=localhost
-DB_PORT=3307
+DB_HOST=mysql
+DB_PORT=3306
+#DB_HOST=localhost
+#DB_PORT=3307
 DB_DATABASE=backend_laravel
 DB_USERNAME=app
 DB_PASSWORD=sa
